Finished booking modal

--- a/examples/b2b-service-demo/src/components/Footer/Footer.module.css
+++ b/examples/b2b-service-demo/src/components/Footer/Footer.module.css
@@ -19,6 +19,25 @@
 }
 
 .Links {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 5rem;
+}
+
+@media screen and (max-width: 960px) {
+  .Wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .Social {
+    justify-content: center;
+  }
+
+  .Links {
+    margin-top: 3rem;
+    justify-content: center;
+    text-align: center;
+    gap: 4rem;
+  }
 }
