--- a/examples/b2b-service-demo/src/components/BookModal/BookModal.module.css
+++ b/examples/b2b-service-demo/src/components/BookModal/BookModal.module.css
@@ -16,17 +16,20 @@
   margin: 0 auto 1.5rem;
 }
 
-.BookModal a {
+.BookModal button {
+  display: inline-block;
   height: 52px;
   width: 100%;
-  font-weight: 500;
+  border-radius: 10px;
+  border: none;
+  line-height: 52px;
   background-color: #1db227;
   color: white;
+  font-weight: 500;
+  font-family: inherit;
+  font-size: 1rem;
   text-decoration: none;
   outline: none;
-  display: inline-block;
-  line-height: 52px;
-  border-radius: 10px;
 }
 
 .CloseBtn {
