--- a/examples/b2b-service-demo/src/components/Footer/Footer.module.css
+++ b/examples/b2b-service-demo/src/components/Footer/Footer.module.css
@@ -41,3 +41,10 @@
     gap: 4rem;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .Links {
+    grid-template-columns: 1fr;
+    gap: 3rem;
+  }
+}
