Minor bug fixes

--- a/examples/b2b-service-demo/src/components/BookModal/BookModal.module.css
+++ b/examples/b2b-service-demo/src/components/BookModal/BookModal.module.css
@@ -30,6 +30,13 @@
   font-size: 1rem;
   text-decoration: none;
   outline: none;
+  cursor: pointer;
+}
+
+.BookModal.Outlined {
+  background: transparent;
+  color: #1db227;
+  border: 1px solid #1db227;
 }
 
 .CloseBtn {
