--- a/examples/b2b-service-demo/src/styles/Home.module.css
+++ b/examples/b2b-service-demo/src/styles/Home.module.css
@@ -6,9 +6,12 @@
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: top center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .Header {
+  width: 100%;
   display: flex;
   align-items: center;
   height: 80px;
@@ -16,13 +19,9 @@
 }
 
 .Wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  max-width: min(100vw - 40px, 1400px);
-  margin: 0 auto;
-  flex: 1;
+  max-width: var(--content-width);
+  margin: 0 auto 10vh;
+  /* flex: 1; */
 }
 
 .Heading {
@@ -56,5 +55,15 @@
   .PricingOptions {
     flex-direction: column;
     align-items: center;
+  }
+
+  .Header {
+    padding: 0 2.5rem;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .Header {
+    padding: 0 1.25rem;
   }
 }
