Donation demo visual improvements.

--- a/examples/b2b-service-demo/src/components/BookModal/BookModal.module.css
+++ b/examples/b2b-service-demo/src/components/BookModal/BookModal.module.css
@@ -16,15 +16,20 @@
   margin: 0 auto 1.5rem;
 }
 
-.BookModal button {
+.ActionsWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.PrimaryButton,
+.SecondaryButton {
   display: inline-block;
   height: 52px;
   width: 100%;
   border-radius: 10px;
   border: none;
-  line-height: 52px;
-  background-color: #1db227;
-  color: white;
+  line-height: 50px;
   font-weight: 500;
   font-family: inherit;
   font-size: 1rem;
@@ -33,10 +38,14 @@
   cursor: pointer;
 }
 
-.BookModal.Outlined {
-  background: transparent;
+.PrimaryButton {
   color: #1db227;
   border: 1px solid #1db227;
+}
+
+.SecondaryButton {
+  background-color: #1db227;
+  color: white;
 }
 
 .CloseBtn {
