--- a/examples/b2b-service-demo/src/components/BookModal/Modal/Modal.module.css
+++ b/examples/b2b-service-demo/src/components/BookModal/Modal/Modal.module.css
@@ -4,6 +4,8 @@
   border: none;
   background: transparent;
   transform: translate(-50%, -50%);
+  max-width: calc(100vw - 20px);
+  outline: none;
 }
 
 .Modal::backdrop {
