--- a/examples/gated-community-demo/src/components/JoinButton/JoinButton.module.css
+++ b/examples/gated-community-demo/src/components/JoinButton/JoinButton.module.css
@@ -15,4 +15,11 @@
   letter-spacing: 0.15px;
   margin-bottom: 60px;
   cursor: pointer;
+  transition: all 250ms cubic-bezier(0.55, 0, 0.1, 1);
+}
+
+.Button:hover {
+  box-shadow:
+    0px 0px 8px 0px rgba(204, 204, 204, 0.8),
+    0px 0px 20px 0px rgba(204, 204, 204, 0.8);
 }
