--- a/examples/gated-community-demo/src/components/RoleCard/RoleCard.module.css
+++ b/examples/gated-community-demo/src/components/RoleCard/RoleCard.module.css
@@ -17,6 +17,12 @@
   border: 1px solid #dbdee2;
   background: #f1f1f1;
   margin: -1px;
+  cursor: pointer;
+  transition: all 250ms cubic-bezier(0.55, 0, 0.1, 1);
+}
+
+.Right:hover {
+  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.05);
 }
 
 .Right h5 {
